@@ -19,6 +19,7 @@
 ### Enhancements
 
  - `Chunky.Fraction` module for manipulating fractions
+  - `new/2` - create a new fraction
   - `has_whole?/1` - fractions is greater than 1, and has a whole component
   - `is_whole?/1` - does a fraction exactly represent a whole number
   - `components/1` - tuple of numerator an denominator
@@ -28,7 +29,8 @@
   - `is_simplified?/1` - is fraction in reduced form?
   - `simplify/1` - reduce fraction
   - `is_zero?/1` - does fraction represent zero?
-
+  - `add/2` - Add two fractions, or a fraction and an integer
+  
  - `Chunky.Grid` module for working with two dimensional data
   - `Grid.new/3` - generate a grid from a value or a function
   - `Grid.get_at/2` and `Grid.get_at/3` - access cell value by 2d index
